<resources>
    <string name="app_name">ProjectGumi</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="shop">Shop</string>
    <string name="explore">Explore</string>
    <string name="cart">Cart</string>
    <string name="favorite">Favorite</string>
    <string name="account">Account</string>
    <string name="facebook_app_id">502865764485189</string>
    <string name="fb_login_protocol_scheme">fb502865764485189</string>

    <string name="title_activity_maps">Map</string>
    <string name="product_title">Product Title</string>
    <string name="product_name">Product Name</string>
    <string name="reduce_the_number_product">reduce the number</string>
    <string name="increasing_the_number_product">increasing the number</string>
    <string name="product_nutri_count">100g</string>
    <string name="product_name_detail">Product name detail</string>
    <string name="product_nutri">Product Nutri</string>
    <string name="product_title_detail">Product Title Detail</string>
    <string name="add_to_basket">Add to basket</string>
    <string name="product_review">Review</string>
    <string name="progress_bar">Please wait! Loading</string>
    <string name="title_head_layout">Title Head Layout</string>
    <string name="enter_phone_number">Please enter phone number</string>
    <string name="first_phone_vn">+84</string>
    <string name="enter_code">Enter Code</string>
    <string name="your_groceries">Get your groceries <br />with nectar</string>
    <string name="button_login_google">Continue with Google</string>
    <string name="button_login_fb">Continue with Facebook</string>
    <string name="resend_code">Resend Code</string>
    <string name="get_code">Get Code</string>
    <string name="logout">logout</string>
    <string name="exclusive_offer">Exclusive Offer</string>
    <string name="see_all">See All</string>
    <string name="best_selling">Best Selling</string>
    <string name="catelory">Catelory</string>
    <string name="cart_name">My Cart</string>
    <string name="go_to_checkout">go to checkout</string>
    <string name="add_all_to_cart">add all to cart</string>
    <string name="favorite_name">Favorite</string>
    <string name="checkout">By placing an order you agree to our <br /> <b>Terms</b> <b>Conditions</b> And <br /></string>
    <string name="place_order">Place Order</string>
    <string name="accepted_title">Your Order has been <br /> accepted</string>
    <string name="accepted_caption">Your items has been placcd and is on <br /> it’s way to being processed</string>
    <string name="back_home">back to home</string>
    <string name="track_order">Track Order</string>
    <string name="try_again">try again</string>
    <string name="failed_title">Oops! Order Failed</string>
    <string name="failed_caption">Something went tembly wrong.</string>
    <string name="welcome_to_our_store">Welcome <br /> to our store</string>
    <string name="groceries">Ger your groceries in as fast as one hour</string>
    <string name="get_start">Get Started</string>
    <string name="customers">Hello Customers</string>

</resources>