<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <androidx.cardview.widget.CardView
        app:cardCornerRadius="30dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <ImageView
                android:id="@+id/imageAccept"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintVertical_bias="0.2"
                android:src="@drawable/icon_failed"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <TextView
                android:layout_marginTop="20dp"
                android:id="@+id/textTitle"
                app:layout_constraintTop_toBottomOf="@id/imageAccept"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:gravity="center"
                style="@style/TextAppearance.AppCompat.Headline"
                android:text="@string/failed_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <TextView
                android:id="@+id/textCaption"
                app:layout_constraintTop_toBottomOf="@id/textTitle"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginTop="20dp"
                android:gravity="center"
                style="@style/TextAppearance.AppCompat.Title"
                android:text="@string/failed_caption"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <Button
                android:id="@+id/btnBackHome"
                android:layout_width="340dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20dp"
                android:text="@string/back_home"
                android:background="@color/transparent"
                android:textColor="@color/black"
                android:layout_marginBottom="30dp"
                android:textAllCaps="true"
                app:layout_constraintTop_toBottomOf="@id/btnTryAgainr"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent" />
            <Button
                android:id="@+id/btnTryAgainr"
                android:layout_width="340dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:layout_marginHorizontal="20dp"
                android:background="@drawable/bg_button_green"
                android:text="@string/try_again"
                android:textColor="@color/white"
                android:textAllCaps="true"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/textCaption"
                app:layout_constraintStart_toStartOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>
    <data>

    </data>
</layout>

