<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.splash.OnBordingActivity">
    <ImageView
        android:src="@drawable/on_bording"
        android:scaleType="centerCrop"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>
    <ImageView
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/title"
        android:src="@drawable/ic_bg_main"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
    <TextView
        android:id="@+id/title"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintVertical_bias="0.7"
        android:text="@string/welcome_to_our_store"
        android:textStyle="bold"
        android:gravity="center"
        android:textSize="45sp"
        android:textColor="@color/white"
        android:layout_marginHorizontal="20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
    <TextView
        android:id="@+id/caption"
        app:layout_constraintTop_toBottomOf="@id/title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:text="@string/groceries"
        android:gravity="center"
        android:textSize="17sp"
        android:textColor="@color/product_detail_bg"
        style="@style/TextAppearance.AppCompat.Headline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
    <Button
        android:id="@+id/buttonStart"
        app:layout_constraintTop_toBottomOf="@id/caption"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="30dp"
        style="@style/Widget.AppCompat.Button.Colored"
        android:textAllCaps="false"
        android:layout_width="match_parent"
        android:textSize="23sp"
        android:layout_height="60dp"
        android:background="@drawable/bg_button_green"
        android:text="@string/get_start"/>
</androidx.constraintlayout.widget.ConstraintLayout>