<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <androidx.constraintlayout.widget.ConstraintLayout

        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.login.LoginActivity">

        <ImageView
            android:id="@+id/image_bg"
            android:src="@drawable/bg"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_width="match_parent"
            android:scaleType="centerCrop"
            android:layout_height="300dp"/>
        <LinearLayout
            android:id="@+id/layout_login"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/image_bg"
            android:orientation="vertical"
            android:layout_margin="30dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                style="@style/TextAppearance.AppCompat.Headline"
                android:text="@string/your_groceries"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <Button
                android:id="@+id/button_loginGg"
                android:layout_marginTop="30dp"
                android:drawableStart="@drawable/ic_google"
                android:background="@drawable/bg_button_google"
                android:paddingStart="40dp"
                android:paddingEnd="40dp"
                android:text="@string/button_login_google"
                android:textColor="@color/white"
                style="@style/TextAppearance.AppCompat.Button"
                android:layout_width="match_parent"
                android:layout_height="60dp"/>
            <Button
                android:id="@+id/button_loginFb"
                android:layout_marginTop="30dp"
                android:drawableStart="@drawable/ic_facebook_logo"
                android:background="@drawable/bg_button_facebook"
                android:paddingStart="40dp"
                android:paddingEnd="40dp"
                android:text="@string/button_login_fb"
                android:textColor="@color/white"
                style="@style/TextAppearance.AppCompat.Button"
                android:layout_width="match_parent"
                android:layout_height="60dp"/>
        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
